old_ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-road-trip
  annotations:
    #kubernetes.io/ingress.class: addon-http-application-routing
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - subjecttochange.dev
    secretName: tls
  rules:
  - host: "subjecttochange.dev"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 3000
  - host: "api.subjecttochange.dev"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api
            port:
              number: 8080
---
